<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/global_bg"
    android:orientation="vertical"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/logo_title_include" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="15dip"
            android:layout_weight="1"
            android:background="@drawable/alpha60"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/generate_detail_report_car_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:layout_marginTop="15dip"
                    android:textColor="@color/black_font"
                    android:textSize="@dimen/standard_padding" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="15dip"
                android:background="@drawable/split_line1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="15dip"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:text="行驶公里数："
                        android:textColor="@color/car_info"
                        android:textSize="@dimen/standard_padding" />

                    <TextView
                        android:id="@+id/generate_detail_report_km"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:textColor="@color/car_info"
                        android:textSize="@dimen/standard_padding" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:layout_marginTop="5dip"
                        android:text="上牌年份："
                        android:textColor="@color/car_info"
                        android:textSize="@dimen/standard_padding" />

                    <TextView
                        android:id="@+id/generate_detail_report_car_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:layout_marginTop="5dip"
                        android:textColor="@color/car_info"
                        android:textSize="@dimen/standard_padding" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:layout_marginTop="5dip"
                        android:text="当前市场价 : "
                        android:textColor="@color/car_info"
                        android:textSize="@dimen/standard_padding" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/generate_detail_report_pricerange"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dip"
                            android:layout_marginTop="5dip"
                            android:layout_weight="7"
                            android:text="无"
                            android:textColor="@color/car_info"
                            android:textSize="@dimen/standard_padding" />

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dip"
                            android:layout_marginTop="5dip"
                            android:layout_weight="3"
                            android:text="万元"
                            android:textColor="@color/car_info"
                            android:textSize="@dimen/standard_padding" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="15dip"
                android:background="@drawable/split_line1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:background="@drawable/alpha60"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="5dip"
                    android:text="@string/head_title"
                    android:textColor="@color/car_info" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:orientation="horizontal" >

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/point_blue"
                        android:text="@string/A"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/a_info"
                        android:textColor="@color/car_info" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:orientation="horizontal" >

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/point_blue"
                        android:text="@string/B"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/b_info"
                        android:textColor="@color/car_info" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:orientation="horizontal" >

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/point_blue"
                        android:text="@string/C"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/c_info"
                        android:textColor="@color/car_info" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:orientation="horizontal" >

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/point_blue"
                        android:text="@string/D"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/d_info"
                        android:textColor="@color/car_info" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="5dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/e_head"
                        android:textColor="@color/car_info" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/point_blue"
                        android:text="@string/E"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/e_end"
                        android:textColor="@color/car_info" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dip"
            android:layout_marginTop="15dip"
            android:background="@drawable/alpha60"
            android:gravity="bottom"
            android:orientation="vertical" >

            <Button
                android:id="@+id/generate_detail_report_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dip"
                android:background="@drawable/generate_detail_report_btn"
                android:text="生成详细评估报告"
                android:textColor="@color/white"
                android:textSize="@dimen/standard_padding" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>